--- a/css/projet.css
+++ b/css/projet.css
@@ -62,6 +62,11 @@ body {
     font-family: Arial, sans-serif;
 }
 
+a{
+    text-decoration: none;
+    color: black;
+}
+
 .titre{
     font-size: 50px;
     margin-left: 50px;
